@@ -234,6 +234,7 @@ extern "C" {
 #define DEV_ide_bmdma_start_transfer(a) \
   bx_devices.pluginPciIdeController->bmdma_start_transfer(a)
 #define DEV_acpi_generate_smi(a) bx_devices.pluginACPIController->generate_smi(a)
+#define DEV_agp_present() (bx_devices.is_agp_present())
 
 ///////// Speaker macros
 #define DEV_speaker_beep_on(frequency) bx_devices.pluginSpeaker->beep_on(frequency)
